workflow pic added

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://adarshaacharya.github.io/YoutubeVideoPlayer/",
+  "homepage": "https://adarshaacharya.github.io/YoutubeVideoPlayer",
   "name": "youtube-video-player",
   "version": "0.1.0",
   "private": true,
